# poker-counter

./: .gitignore  README.md  compile.ps1  main.spec  pyproject.toml
diagrams/: 01_game_flow.puml  02_game_state_machine.puml  03_ui_layout.puml  04_calibration.puml  05_card_recognition.puml  06_thread_architecture.puml  99_module_dependencies.puml
src/: analyzer.py  app.py  calibrate.py  capture.py  card_counter.py  card_matcher.py  card_types.py  config.py  config.yaml  counter.py  debug_replay.py  exceptions.py  game.py  image_match.py  logger.py  logic.py  main.py  main_window.py  recognize.py  region.py  tracker.py
src-old/: config.yaml  main.py
src-old/core/: backend_thread.py  verify_count.py
src-old/functions/: color_percentage.py  match_template.py  windows_offset.py
src-old/misc/: custom_types.py
src-old/models/: counters.py  regions.py
src-old/ui/: counter_window.py
src/classes/: card_counter.py  card_identifier.py  game.py  region.py
src/core/: backend_logic.py  backend_thread.py  verify_count.py
src/functions/: color_percentage.py  image_match.py  match_template.py
src/game_logic/: __init__.py  backend_logic.py  card_counter.py  game_state.py  simple_counter.py  tkinter_counter.py
src/image_processing/: __init__.py  color_percentage.py  image_types.py  template_match.py  templates.py
src/misc/: __init__.py  custom_types.py  exceptions.py  logger.py  open_file.py  singleton.py  windows_offset.py
src/models/: config.py  counters.py  enum.py  game_state.py  labels.py  regions.py  screenshot.py
src/recognition/: calibrate.py  capture.py  recognize.py
src/regions/: __init__.py  card_region.py  landlord_enum.py  landlord_location_enum.py  region.py  region_manger.py  region_state.py
src/tracking/: analyzer.py  counter.py  tracker.py
src/ui/: __init__.py  counter_window.py  error_window.py  main_window.py  master_window.py  overlay_manager.py  overlay_window.py  windows_type.py
